# Predicting-Loan-Payback

./: .gitignore  Makefile  README.md  demo.ipynb  prediction-loan-payback.ipynb  pyproject.toml  submission.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
iframe_figures/: figure_30.html  figure_31.html  figure_32.html  figure_33.html
notebooks/: check_data_leakage.ipynb  exploration.ipynb  explore_residual_stacking_idea.ipynb
src/: config.py  create_folds.py  create_stacking_submission.py  create_submission.py  feature_engineering.py  inference_utils.py  model_dispatcher.py  optuna_tuner.py  train.py  train_tuned_and_stack.py
